--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.App"
         tools:ignore="AllowBackup">
         <activity
-            android:name="com.nageshempire.sample.MainActivity"
+            android:name="com.nageshempire.mad.sample.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
